--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/player_2d.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/menu.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,12 +31,13 @@ open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player_2d.
 current_scene="res://scenes/player_2d.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/player_2d.gd"]
-selected_script="res://scenes/player_2d.gd"
+open_scripts=["res://scenes/game.gd", "res://scenes/menu.gd", "res://scenes/player_2d.gd"]
+selected_script="res://scenes/game.gd"
 open_help=[]
 script_split_offset=105
 list_split_offset=0
