--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-.godot
+# Godot-specific ignores
+.godot/
+.import/
+export.cfg
+export_presets.cfg
+*.tmp
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
